version 1.1 changelog: I made the mobile controlls only visible when playing on mobile I fixed some bugs
I think that the game still needs some work, so I'll probably be updating it in the future

--- a/style.css
+++ b/style.css
@@ -4,9 +4,7 @@
     height: 180px;
     background-color: darkcyan;
 }
-#canvas{
-  position: relative;
-}
+
 #controlls
 {
   position: absolute;
